# ROS2

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
log/: latest_build
src/IFRA_ConveyorBelt/: generate_world.py  generate_zone_poses.py
src/IFRA_ConveyorBelt/conveyor_box_controller/: package.xml  setup.cfg  setup.py
src/IFRA_ConveyorBelt/conveyorbelt_gazebo/: package.xml
src/IFRA_ConveyorBelt/conveyorbelt_msgs/: CMakeLists.txt
src/IFRA_ConveyorBelt/ros2_conveyorbelt/: CMakeLists.txt  package.xml
src/my_cpp_pkg/: CMakeLists.txt  package.xml
src/my_cpp_pkg/src/: add_two_ints_client_no_oop.cpp  add_two_ints_client_oop.cpp  add_two_ints_server.cpp  hw_status_publisher.cpp  my_first_node.cpp  number_publisher.cpp  robot_news_listener.cpp
src/my_py_pkg/: package.xml  setup.py
src/my_py_pkg/my_py_pkg/: add_two_ints_client_no_oop.py  add_two_ints_server.py  battery.py  hw_status_publisher.py  led.py  move_robot.py  my_first_node.py  number_counter.py  read_image.py
src/my_robot_agv/: CMakeLists.txt  package.xml
src/my_robot_agv/launch/: display.launch.py
src/my_robot_agv/urdf/: agv.urdf  agv.urdf.xacro  agv_base.xacro  dosecar.urdf
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_bringup/launch/: dosecar_gazebo.launch.py  number_app.launch.py
src/my_robot_bringup/worlds/: first.world  trial.world
src/my_robot_conveyor/: CMakeLists.txt  package.xml
src/my_robot_conveyor/config/: conveyor_position.yaml
src/my_robot_conveyor/launch/: conveyor_gazebo.launch.py  display.launch.py
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_interfaces/: CMakeLists.txt
(+65 files in other folders)
